syntax = "proto3";

package commandproto;

message Event {
       	string id = 1;
       	int64 time = 2;
        string device_udid = 4;
        bytes payload_bytes = 5;
}
